css/style.css
/* RESET */

*{
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

body{
    font-family: 'Vobis', sans-serif;
    color: white;
}

ul{
    list-style-type: none;
}

/* UTILITY */

.flex{
    display: flex;
}

.flex-wrap{
    flex-wrap: wrap;
}

.flex-column{
    flex-direction: column;
    justify-content: space-between;
}

.p-relative{
    position: relative;
}

.green-line{
    border: 1px solid #cbff31;
}

:root{
    --main-color: white;
    --secondary-color: gray;
    --display-none: none; 
    --text-big: uppercase;
    --font-dot-eight: .8rem;
}

/* css header */

header{
    background-color: black;
    height: calc(100vh - 100px);
    width: 200px;
    color: var(--secondary-color);
}

section#section-top-header,
section#section-bottom-header{
    padding: 1rem;
}

section#section-top-header div#img-full-logo img{
    width: 75%;
}

section#section-top-header div#img-small-logo{
    display: var(--display-none);
}

section#section-top-header ul{
    margin: 1rem 0;
}

div.head-green-line{
    height: 27px;
    width: 0;
    position: absolute;
    top: 14%;
    left: 0;
}

section#section-top-header ul>li{
    padding-bottom: .7rem;
}

section#section-top-header li i{
    width: 12%;
}

section#section-top-header li span.text{
    font-size: .85rem;
}

section#section-top-header li i{
    margin-right: .2rem;
}

ul li>i.fa-house,
ul li>span#home{
    color: var(--main-color);
}

header ul li:hover,
header div.install:hover{
    cursor: pointer;
    color: var(--main-color);
}

section#section-top-header p{
    text-transform: var(--text);
    font-weight: bold;
    color: var(--main-color);
}

section#section-top-header ul li#made-playlist{
    align-items: center;
}

li#made-playlist span.text{
    margin-left: 1.75rem;
}

div.install span.text{
    padding-left: .5rem;
}

div.install{
    padding-bottom: .2rem;
}

section#section-bottom-header div.separator{
    border: 1px solid var(--secondary-color);
    margin: .5rem 0;
}

div.profile{
    padding-top: .5rem;
}

div.profile span#user{
    color: var(--main-color);
    font-size: 1.1rem;
    font-weight: bold;
    padding-left: .5rem;
}

/* css MAIN */

main{
    background-color: #141922;
    height: calc(100vh - 100px);
    width: calc(100% - 200px);
    overflow-y: auto;
}

/* css upgrade section */

section#upgrade{
    background-color: #080b12;
    height: 80px;
    justify-content: flex-end;
    align-items: center;
}

section#upgrade a{
    color: var(--main-color);
    font-size: var(--font-dot-eight);
    font-weight: bold;
    text-decoration: none;
    text-transform: var(--text-big);
    margin-right: 1rem;
    border: 1px solid var(--main-color);
    padding: .75rem 2rem;
    border-radius: 50px;
}

section#upgrade a:hover{
    transform: scale(1.15);
}

/* css list section */

section#list{
    text-align: center;
}

section#list ul li{
    display: inline-block;
    text-transform: var(--text-big);
    color: var(--secondary-color);
    padding: 1rem;
    font-size: var(--font-dot-eight);
}

li>div.list-green-line{
    width: 40%;
    margin: .25rem auto;
}

section#list ul li:hover{
    cursor: pointer;
    color: var(--main-color);
}

/* css album section */

section#container-row{
    padding: 0 1rem;
}

section.row,
div.albums-row{
    margin-top: 1rem;
}

section.row h2{
    padding-top: 1rem;
    font-size: 2rem;
}

div.albums-row div.card{
    font-size: .9rem;
    text-align: center;
    width: calc((100% / 6) - 1rem);
    margin: 0 1rem 2rem 0;
}

span.play{
    display: var(--display-none);
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50% , -50%);
}

div.albums-row div.card:hover{
    cursor: pointer;
    display: inline-block;
}

div.album-img img{
    width: 100%;
}

div.card:hover img{
    opacity: 0.5;    
}

div.card:hover span.play{
    display: block;
}

div.album-info h3{
    padding: 1rem .3rem .6rem;
}

div.album-info p{
    color: var(--secondary-color);
}

section.row>p{
    font-size: var(--font-dot-eight);
    color: var(--secondary-color);
    padding: .5rem 0;
}

div.card div.circle-img{
    border-radius: 50%;
    overflow: hidden;
    object-fit: cover;
}


/* css footer */

footer{
    background-color: #282828;
    height: 100px;
    width: 100%;
    z-index: 3;
}


/* RESPONSIVE !!!! */


/* MEDIUM */
@media screen and (max-width: 992px){

    div.albums-row{
        flex-wrap: wrap;
    }

    div.albums-row div.card{
        width: calc((100% / 4) - 1rem);
    }

}

/* SMALL */
@media screen and (max-width: 768px){

    div.albums-row div.card{
        width: calc((100% / 2) - 1rem);
    }
}

/* X-SMALL */
@media screen and (max-width: 576px){

    header{
        width: 50px;
        text-align: center;
        align-items: center;
        font-size: 1.5rem;
    }

    section#section-top-header div#img-full-logo,
    section#section-top-header li span.text,
    section#section-top-header p,
    section#section-top-header ul li#made-playlist,
    section#section-bottom-header div.separator,
    section#section-bottom-header span.text,
    section#section-bottom-header span#user,
    div.head-green-line{
        display: var(--display-none);
    }
    
    section#section-top-header div#img-small-logo{
        display: inline-block;
        width: 100%;
    }

    main{
        width: calc(100% - 70px);
    }
}

